--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 =========================================================
 * Material Tailwind Dashboard React - v2.1.0
 =========================================================
-* Product Page: https://www.creative-tim.com/product/west
+* Product Page: https://www.creative-tim.com/product/SmartLife
 * Copyright 2023 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/west/blob/main/LICENSE.md)
+* Licensed under MIT (https://github.com/creativetimofficial/SmartLife/blob/main/LICENSE.md)
 * Coded by Creative Tim
 =========================================================
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
@@ -15,7 +15,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>West</title>
+    <title>SmartLife</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
