--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <!-- Nepcha Analytics (nepcha.com) -->
     <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
     <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    
+    <!-- Google Maps JavaScript API -->
+    <script async defer loading=async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBysl2I4PpTUlOhjZitbDKPowkgGOw8hH4&libraries=places"></script>
   </head>
   <body>
     <div id="root"></div>
