--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Vector_Logo/color_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SmartLife</title>
     <link
@@ -29,11 +29,8 @@
     />
     <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
     
-    <!-- Nepcha Analytics (nepcha.com) -->
-    <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
     <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
     
-    <!-- Google Maps JavaScript API -->
     <script async defer loading=async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBysl2I4PpTUlOhjZitbDKPowkgGOw8hH4&libraries=places"></script>
   </head>
   <body>
