--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <script defer data-site="front.smartlife.az" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
   </head>
   <body>
     <div id="root"></div>
